# indexed_bzip2

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  emplace-preallocated-vector-bug.cpp  memory-leak-reproducer.cpp
.github/workflows/: build-binaries.yml  codeql-analysis.yml  conda-rapidgzip.yml  conda.yml  publish-binaries.yml  python-package.yml  release-template.md  test-cpp.yml  test-python.yml  test.yml  wheels-rapidgzip.yml  wheels.yml
indexed_bzip2/: BitReader.hpp  Cache.hpp  ParallelBZ2Reader.hpp  ParallelBitStringFinder.hpp  bzip2.h  indexed_bzip2.cpp  indexed_bzip2.pyx
python/indexed_bzip2/: indexed_bzip2.pyx  pyproject.toml  setup.py
python/pragzip/: CHANGELOG.md
python/rapidgzip/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  rapidgzip.pyx  setup.cfg  setup.py
results/benchmarks/commits/: benchmark-2024-02-window-compression.sh
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  benchmarkCRC32.cpp  benchmarkGzipBlockFinder.cpp  benchmarkHuffmanCoding.cpp  benchmarkIndexCompression.cpp  benchmarkInflate.cpp  benchmarkSequential2023.cpp  empiricalFalsePositiveRate.cpp
src/core/: AffinityHelpers.cpp  AffinityHelpers.hpp  AlignedAllocator.hpp  AtomicBitVector.hpp  BitManipulation.cpp  BitManipulation.hpp  BitReader.hpp  BlockFetcher.hpp  BlockFinder.hpp  BlockMap.hpp  CMakeLists.txt  FasterVector.hpp  FileUtils.cpp  FileUtils.hpp  JoiningThread.hpp  MmapAllocator.hpp  ParallelBitStringFinder.hpp  Prefetcher.hpp  StreamedResults.hpp  TestHelpers.hpp  ThreadPool.hpp  VectorPool.hpp  common.hpp
src/core/filereader/: Python.hpp  Shared.hpp  SinglePass.hpp  Standard.hpp  StreamAdapter.hpp
src/filereader/: Shared.hpp
src/indexed_bzip2/: BZ2BlockFetcher.hpp  BZ2Reader.hpp  BZ2ReaderInterface.hpp  ParallelBZ2Reader.hpp  bzip2.hpp
src/pragzip/: CMakeLists.txt  DecodedData.cpp  DecodedData.hpp  FixedHuffmanCoding.cpp  FixedHuffmanCoding.hpp  GzipAnalyzer.cpp  GzipAnalyzer.hpp  GzipBlockFetcher.hpp  GzipBlockFinder.hpp  GzipChunkFetcher.hpp  GzipReader.cpp  GzipReader.hpp  IndexFileFormat.cpp  IndexFileFormat.hpp  ParallelGzipReader.cpp  ParallelGzipReader.hpp  ParallelGzipReader.tpp  deflate.hpp  gzip.cpp  gzip.hpp
src/pragzip/blockfinder/: CMakeLists.txt  DynamicHuffman.cpp  DynamicHuffman.hpp  DynamicHuffman.tpp
src/rapidgzip/: CMakeLists.txt  ChunkData.hpp  CompressedVector.hpp  DecodedData.hpp  GzipChunkFetcher.hpp  GzipCounter.hpp  IndexFileFormat.hpp  MarkerReplacement.hpp  ParallelGzipReader.hpp  WindowMap.hpp  deflate.hpp  isal.hpp  rapidgzip.hpp  zlib.hpp
src/rapidgzip/blockfinder/: Bgzf.hpp  DynamicHuffman.hpp  GzipHeader.hpp  PigzParallel.hpp  PigzStringView.hpp
src/rapidgzip/blockfinder/precodecheck/: SingleCompressedLUT.hpp  SingleLUT.hpp  WalkTreeCompressedLUT.hpp  WalkTreeLUT.hpp
src/rapidgzip/chunkdecoding/: Bzip2Chunk.hpp  GzipChunk.hpp
src/rapidgzip/gzip/: CMakeLists.txt  GzipAnalyzer.hpp  GzipReader.hpp  InflateWrapper.hpp  crc32.hpp  deflate.hpp  isal.hpp
src/rapidgzip/huffman/: DistanceCoding.hpp  DistanceCodingOnlyBitCount.hpp  HuffmanCodingDoubleLiteralCached.hpp  HuffmanCodingShortBitsCachedDeflate.hpp  HuffmanCodingShortBitsMultiCached.hpp
src/tests/: testGIL.py  testPythonWrappers.py
src/tests/core/: CMakeLists.txt  testBitReader.cpp  testBitStringFinder.cpp  testMmapAllocator.cpp  testParallelBitStringFinder.cpp  testPrefetcher.cpp
src/tests/data/: createTests.sh
src/tests/rapidgzip/: CMakeLists.txt  createTestFiles.cpp  testCompressedVector.cpp  testDecodedData.cpp  testGzip.cpp  testGzipBlockFinder.cpp  testGzipChunk.cpp  testGzipChunkFetcher.cpp  testGzipIndexFormat.cpp  testHuffmanCoding.cpp  testInflateWrapper.cpp  testLZ4.cpp  testParallelGzipReader.cpp  testPrecodeCheck.cpp
src/tools/: CMakeLists.txt  bitpatternstats.cpp  pragzip.cpp  rapidgzip.cpp  trace-benchmarkPipeRead.sh  trace-rapidgzip.sh
tests/: testParallelBZ2Reader.cpp
tools/: Makefile  bzcatpipe.cpp  ibzip2.cpp
