# See https://setuptools.readthedocs.io/en/latest/build_meta.html

[build-system]
# Use setuptools >= 43 because it automatically includes pyproject.toml in source distribution
# Use setuptools >= 46.5 to use attr: package.__version__
# Use setuptools >= 61 for pyproject.toml support
# Use setuptools < 72 because of this: https://github.com/pypa/distutils/issues/283
# https://setuptools.readthedocs.io/en/latest/history.html#id284
# Pin Cython < 3.1.0 because of this errors on macos-14 runner (2025-06):
#    indexed_bzip2.cpp:16328:29: error: use of undeclared identifier 'PyDescr_NewMember'
#        descr = PyDescr_NewMember(type, memb);
#  -> I think this was only an issue for Python 3.8, which is not supported anymore.
requires = [
    "setuptools >= 61.2",
    # https://github.com/pypa/distutils/issues/283
    # https://github.com/pypa/cibuildwheel/issues/2676#issuecomment-3603165647
    "setuptools<72; platform_python_implementation == 'PyPy' and python_version < '3.11'",
    "wheel",
    "cython ~= 3.0"
]

[project]
name = "indexed_bzip2"
version = "1.7.0"
description = "Fast random access to bzip2 files"
authors = [{name = "Maximilian Knespel", email = "mxmlnknp@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Compression",
]
urls = {Homepage = "https://github.com/mxmlnkn/indexed_bzip2"}
requires-python = ">= 3.9"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
ibzip2 = "indexed_bzip2:cli"

[tool.setuptools]
py-modules = ["indexed_bzip2"]
license-files = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
]
